--- a/src/akelpad-src/AkelFiles/Langs/Resources/Brazilian.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Brazilian.rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "© 2013 Cleverson Casarin Uliana (clever92000@yahoo.com.br)"
+  #define RC_VERSIONCOPYRIGHT "© 2014 Cleverson Casarin Uliana (clever92000@yahoo.com.br)"
   #define RC_VERSIONNAME "Brazilian.dll"
 #endif
 #include "winresrc.h"
@@ -85,6 +85,7 @@ BEGIN
         POPUP "Seleçã&o"
         BEGIN
             MENUITEM "Colar por coluna\tAlt+V",     IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "&Indentar por tabs\tTab",     IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "&Desindentar por tabs\tShift+Tab", 
                                                     IDM_EDIT_DELETE_TAB_MENU
@@ -99,6 +100,8 @@ BEGIN
 
             MENUITEM "Apagar espaços ao &final\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "&Tudo maiúsculo\tCtrl+6",     IDM_EDIT_UPPERCASE
@@ -895,17 +898,20 @@ BEGIN
                     WS_TABSTOP,9,59,200,10
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "Extensão padrão ao salvar",IDC_STATIC,37,77,171,8
-    GROUPBOX        "Janela de Procurar/Substituir",IDC_STATIC,9,96,200,53
+    GROUPBOX        "Janela de Procurar/Substituir",IDC_STATIC,9,96,200,66
     CONTROL         "Fechar diálogo ao substituir tudo",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "Verificar ""Na seleção"" se a seleção não estiver vazia",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "Busca cíclica",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Aviso",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -920,7 +926,7 @@ BEGIN
     LTEXT           "Página da web:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "Autores:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,46,98,22,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -963,7 +969,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""© 2013 Cleverson Casarin Uliana (clever92000@yahoo.com.br)""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""© 2014 Cleverson Casarin Uliana (clever92000@yahoo.com.br)""\r\n"
     "  #define RC_VERSIONNAME ""Brazilian.dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -1031,6 +1037,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "Atualizar %s\n\nVersão atual: %d.%d.%d.%d\nVersão necessária: %d.%d%d.%d"
     MSG_HOTKEY_EXISTS       "Tecla de atalho já associada ao ""%s""."
     MSG_CANNOT_OPEN_FILE    "Não foi possível abrir o arquivo ""%s""."
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "Número de linha inválido."
     MSG_LONG_FILELIST       "Escolhidos arquivos demais."
     MSG_DOCUMENT_CHANGED    "O documento foi alterado. Quer salvá-lo ?"
