--- a/src/akelpad-src/AkelFiles/Langs/Resources/Chinese (Simplified).rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Chinese (Simplified).rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "(c) 2013 cnnnc"
+  #define RC_VERSIONCOPYRIGHT "(c) 2014 cnnnc"
   #define RC_VERSIONNAME "Chinese (Simplified).dll"
 #endif
 #include "winresrc.h"
@@ -85,6 +85,7 @@ BEGIN
         POPUP "选择(&S)"
         BEGIN
             MENUITEM "列粘贴\tAlt+V",               IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "制表符缩进(&B)\tTab",         IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "制表符反缩进(&T)\tShift+Tab", IDM_EDIT_DELETE_TAB_MENU
             MENUITEM "空格缩进(&C)\tSpace",         IDM_EDIT_INSERT_SPACE_MENU
@@ -96,6 +97,8 @@ BEGIN
 
             MENUITEM "去除尾部的空格(&W)\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "大写(&U)\tCtrl+6",            IDM_EDIT_UPPERCASE
@@ -880,16 +883,19 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,59,200,10
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "保存时默认的扩展名",IDC_STATIC,37,77,171,8
-    GROUPBOX        "查找/替换 对话框",IDC_STATIC,9,96,200,53
+    GROUPBOX        "查找/替换 对话框",IDC_STATIC,9,96,200,66
     CONTROL         "全部替换 - 关闭对话框",IDC_OPTIONS_REPLACEALL_CLOSE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "如果选定区域不为空就选上“选定区域”。",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "循环搜索",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "提示",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -904,7 +910,7 @@ BEGIN
     LTEXT           "主页:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "作者:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,72,82,125,8,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,72,82,125,8,
                     NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,43,98,29,8,NOT WS_GROUP,WS_EX_RIGHT
     EDITTEXT        IDC_ABOUT_EMAIL_SHENGALTS,74,96,107,12,ES_READONLY | NOT 
@@ -946,7 +952,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""(c) 2013 cnnnc""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""(c) 2014 cnnnc""\r\n"
     "  #define RC_VERSIONNAME ""Chinese (Simplified).dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -994,6 +1000,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "更新 %s\n\n当前版本: %d.%d.%d.%d\n需要版本: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "热键已经指定给 ""%s""。"
     MSG_CANNOT_OPEN_FILE    "无法打开文件 ""%s""。"
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "无效的行号。"
     MSG_LONG_FILELIST       "选择太多文件。"
     MSG_DOCUMENT_CHANGED    "文档已经被修改。是否保存?"
