--- a/src/akelpad-src/AkelFiles/Langs/Resources/Chinese (Traditional).rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Chinese (Traditional).rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "(c) 2013 Minson"
+  #define RC_VERSIONCOPYRIGHT "(c) 2014 Minson"
   #define RC_VERSIONNAME "Chinese (Traditional).dll"
 #endif
 #include "winresrc.h"
@@ -85,6 +85,7 @@ BEGIN
         POPUP "選取項目(&S)"
         BEGIN
             MENUITEM "單欄式貼上\tAlt+V",           IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "Tab 縮排(&b)\tTab",           IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "取消 Tab 縮排(&T)\tShift+Tab", 
                                                     IDM_EDIT_DELETE_TAB_MENU
@@ -98,6 +99,8 @@ BEGIN
 
             MENUITEM "修剪尾端空格(&w)\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "全部大寫(&U)\tCtrl+6",        IDM_EDIT_UPPERCASE
@@ -882,17 +885,20 @@ BEGIN
                     WS_TABSTOP,9,59,200,10
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "預設儲存的副檔名",IDC_STATIC,37,77,171,8
-    GROUPBOX        "尋找/取代對話方塊",IDC_STATIC,9,96,200,53
+    GROUPBOX        "尋找/取代對話方塊",IDC_STATIC,9,96,200,66
     CONTROL         "關閉對話方塊時「全部取代」",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "如果選取項目不為空時，請檢查「選取項目」",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "循環搜尋",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Prompt",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -907,7 +913,7 @@ BEGIN
     LTEXT           "首頁:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "作者:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "電子郵件:",IDC_STATIC,34,98,36,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -950,7 +956,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""(c) 2013 Minson""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""(c) 2014 Minson""\r\n"
     "  #define RC_VERSIONNAME ""Chinese (Traditional).dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -998,6 +1004,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "更新 %s\n\n目前版本: %d.%d.%d.%d\n所需版本: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "快速鍵已指派給 ""%s""。"
     MSG_CANNOT_OPEN_FILE    "無法開啟檔案 ""%s""。"
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "無效的行數。"
     MSG_LONG_FILELIST       "選取太多檔案。"
     MSG_DOCUMENT_CHANGED    "文件已被修改。您要儲存它嗎?"
