--- a/src/akelpad-src/AkelFiles/Langs/Resources/Czech.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Czech.rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "© 2013 Damned"
+  #define RC_VERSIONCOPYRIGHT "© 2014 Damned"
   #define RC_VERSIONNAME "Czech.dll"
 #endif
 #include "winresrc.h"
@@ -85,6 +85,7 @@ BEGIN
         POPUP "&Volby"
         BEGIN
             MENUITEM "Vložit sloupec\tAlt+V",       IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "Ods&adit text\tTab",          IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "&Zrušit odsazení textu\tShift+Tab", 
                                                     IDM_EDIT_DELETE_TAB_MENU
@@ -98,6 +99,8 @@ BEGIN
 
             MENUITEM "Smazat mezeru na konci øádkù\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "&VELKÁ PÍSMENA\tCtrl+6",      IDM_EDIT_UPPERCASE
@@ -892,17 +895,20 @@ BEGIN
                     WS_TABSTOP,9,59,200,10
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "výchozí ukládací pøípona",IDC_STATIC,37,77,171,8
-    GROUPBOX        "Dialog Najít/Nahradit",IDC_STATIC,9,96,200,53
+    GROUPBOX        "Dialog Najít/Nahradit",IDC_STATIC,9,96,200,66
     CONTROL         "Tlaèítko ""Nahradit vše"" ukonèí dialog",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "Zkontrolovat ""Vybrat"" pokud výbìr není prázdný",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "Vyhledávat celé vìty",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Øádek",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -917,7 +923,7 @@ BEGIN
     LTEXT           "Náš web:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "Autoøi:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,46,98,22,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -960,7 +966,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""© 2013 Damned""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""© 2014 Damned""\r\n"
     "  #define RC_VERSIONNAME ""Czech.dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -1026,6 +1032,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "Aktualizujte %s\n\nAktuální verze: %d.%d.%d.%d\nPožadovaná verze: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "Tato klávesová zkratka je již pøiøazena k ""%s""."
     MSG_CANNOT_OPEN_FILE    "Nelze otevøít soubor ""%s""."
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "Neplatné èíslo øádku."
     MSG_LONG_FILELIST       "Je vybráno pøíliš mnoho souborù."
     MSG_DOCUMENT_CHANGED    "Dokument se zmìnil. Chcete ho uložit?"
