--- a/src/akelpad-src/AkelFiles/Langs/Resources/Dutch.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Dutch.rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "© 2013 Henk G. Zikken"
+  #define RC_VERSIONCOPYRIGHT "© 2014 Henk G. Zikken"
   #define RC_VERSIONNAME "Dutch.dll"
 #endif
 #include "winresrc.h"
@@ -85,6 +85,7 @@ BEGIN
         POPUP "&Selectie"
         BEGIN
             MENUITEM "Kolomvormig plakken\tAlt+V",  IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "Ta&b insprong vergroten\tTab", 
                                                     IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "&Tab insprong verkleinen\tShift+Tab", 
@@ -100,6 +101,8 @@ BEGIN
 
             MENUITEM "Ver&wijder achterliggende witruimtes\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "&HOOFDLETTERS\tCtrl+6",       IDM_EDIT_UPPERCASE
@@ -896,17 +899,20 @@ BEGIN
                     WS_TABSTOP,9,59,200,10
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "Standaard extentie bij opslaan",IDC_STATIC,37,77,171,8
-    GROUPBOX        "Zoeken/Vervangen dialoog",IDC_STATIC,9,96,200,53
+    GROUPBOX        "Zoeken/Vervangen dialoog",IDC_STATIC,9,96,200,66
     CONTROL         "Vervang alles - sluit dialoog",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "Controleer ""In selectie"" of selectie niet leeg is",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "Cyclus zoeken",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Prompt",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -921,7 +927,7 @@ BEGIN
     LTEXT           "Homepage:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "Auteurs:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,46,98,22,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -964,7 +970,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""© 2013 Henk G. Zikken""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""© 2014 Henk G. Zikken""\r\n"
     "  #define RC_VERSIONNAME ""Dutch.dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -1014,6 +1020,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "Update %s\n\nActuele versie: %d.%d.%d.%d\nVereiste versie: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "De sneltoets is al toegewezen aan ""%s""."
     MSG_CANNOT_OPEN_FILE    "Kan bestand  ""%s"" niet openen."
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "Ongeldige regel nummer."
     MSG_LONG_FILELIST       "Te veel bestanden gekozen."
     MSG_DOCUMENT_CHANGED    "Document werd gewijzigd. Wilt u het wilt opslaan?"
