--- a/src/akelpad-src/AkelFiles/Langs/Resources/French.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/French.rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "© 2013 Pascal Souchet aka MaxPaul"
+  #define RC_VERSIONCOPYRIGHT "© 2014 Pascal Souchet aka MaxPaul"
   #define RC_VERSIONNAME "French.dll"
 #endif
 #include "winresrc.h"
@@ -85,6 +85,7 @@ BEGIN
         POPUP "&Sélection"
         BEGIN
             MENUITEM "Coller dans la colonne\tAlt+V", IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "Décaler à droite d'une ta&bulation\tTab", 
                                                     IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "Décaler à gauche d'une &tabulation\tShift+Tab", 
@@ -100,6 +101,8 @@ BEGIN
 
             MENUITEM "Suppimer les espaces &finaux\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "&MAJUSCULE\tCtrl+6",          IDM_EDIT_UPPERCASE
@@ -899,17 +902,20 @@ BEGIN
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "Extension d'enregistrement par défaut",IDC_STATIC,37,77,
                     171,8
-    GROUPBOX        "Dialogue Chercher/Remplacer",IDC_STATIC,9,96,200,53
+    GROUPBOX        "Dialogue Chercher/Remplacer",IDC_STATIC,9,96,200,66
     CONTROL         "Remplacer tout - ferme le dialogue",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "Cocher ""Dans la sélection"" si la sélection n'est pas vide",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "Recherche cyclique",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Prompt",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -924,7 +930,7 @@ BEGIN
     LTEXT           "Site:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "Auteurs:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,46,98,22,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -967,7 +973,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""© 2013 Pascal Souchet aka MaxPaul""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""© 2014 Pascal Souchet aka MaxPaul""\r\n"
     "  #define RC_VERSIONNAME ""French.dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -1017,6 +1023,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "Mise à jour %s\n\nVersion actuelle: %d.%d.%d.%d\nVersion requise: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "Touche déjà affectée à ""%s""."
     MSG_CANNOT_OPEN_FILE    "Impossible d'ouvrir le fichier ""%s""."
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "Numéro de ligne invalide."
     MSG_LONG_FILELIST       "Trop de fichiers choisis."
     MSG_DOCUMENT_CHANGED    "Le document a été modifié. Voulez-vous l'enregistrer?"
