--- a/src/akelpad-src/AkelFiles/Langs/Resources/German.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/German.rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "© 2013 Michael Kogan aka Photon"
+  #define RC_VERSIONCOPYRIGHT "© 2014 Michael Kogan aka Photon"
   #define RC_VERSIONNAME "German.dll"
 #endif
 #include "winresrc.h"
@@ -85,6 +85,7 @@ BEGIN
         POPUP "Auswa&hl"
         BEGIN
             MENUITEM "Spaltenweise einfügen\tAlt+V", IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "Tab einfüg&en\tTab",          IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "Tab entfer&nen\tShift+Tab",   IDM_EDIT_DELETE_TAB_MENU
             MENUITEM "Leerstelle einfü&gen\tSpace", IDM_EDIT_INSERT_SPACE_MENU
@@ -97,6 +98,8 @@ BEGIN
 
             MENUITEM "&Tabs und Leerstellen am Ende entfernen\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "&GROSSBUCHSTABEN\tCtrl+6",    IDM_EDIT_UPPERCASE
@@ -896,17 +899,20 @@ BEGIN
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "Standard-Dateierweiterung beim Speichern",IDC_STATIC,37,
                     77,171,8
-    GROUPBOX        "Suchen/Ersetzen-Dialog",IDC_STATIC,9,96,200,53
+    GROUPBOX        "Suchen/Ersetzen-Dialog",IDC_STATIC,9,96,200,66
     CONTROL         """Alles ersetzen"" schließt automatisch Dialog",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "Im markierten Bereich direkt suchen, wenn nicht leer",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "Zyklische Suche",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Bestätigung",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -921,7 +927,7 @@ BEGIN
     LTEXT           "Homepage:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "Autoren:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,46,98,22,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -964,7 +970,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""© 2013 Michael Kogan aka Photon""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""© 2014 Michael Kogan aka Photon""\r\n"
     "  #define RC_VERSIONNAME ""German.dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -1031,6 +1037,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "Aktualisieren Sie %s\n\nAktuelle Version: %d.%d.%d.%d\nBenötigte Version: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "Ein Hotkey wurde bereits ""%s"" zugewiesen."
     MSG_CANNOT_OPEN_FILE    "Die Datei ""%s"" kann nicht geöffnet werden."
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "Ungültige Zeilennummer."
     MSG_LONG_FILELIST       "Zu viele Dateien ausgewählt."
     MSG_DOCUMENT_CHANGED    "Die Datei wurde verändert. Änderungen speichern?"
