--- a/src/akelpad-src/AkelFiles/Langs/Resources/Hungarian.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Hungarian.rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "© 2013 ZityiSoft"
+  #define RC_VERSIONCOPYRIGHT "© 2014 ZityiSoft"
   #define RC_VERSIONNAME "Hungarian.dll"
 #endif
 #include "winresrc.h"
@@ -85,6 +85,7 @@ BEGIN
         POPUP "K&ijelölés"
         BEGIN
             MENUITEM "Oszlop beillesztés\tAlt+V",   IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "Ta&bulátor behúzás\tTab",     IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "Ta&bulátor behúzás visszavonás\tShift+Tab", 
                                                     IDM_EDIT_DELETE_TAB_MENU
@@ -98,6 +99,8 @@ BEGIN
 
             MENUITEM "Befejezõ szóköz kivágása\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "NAGYBETÛS\tCtrl+6",           IDM_EDIT_UPPERCASE
@@ -893,17 +896,20 @@ BEGIN
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "alapértelmezett kiterjesztés mentése",IDC_STATIC,37,77,
                     171,8
-    GROUPBOX        "Keresés/csere párbeszédpanel",IDC_STATIC,9,96,200,53
+    GROUPBOX        "Keresés/csere párbeszédpanel",IDC_STATIC,9,96,200,66
     CONTROL         """Mind lecseréli"" párbeszédablak bezárása",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "Kijelölés ""kijelölésben"" ha a kijelölés nem üres",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "Ciklikus keresés",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Prompt",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -918,7 +924,7 @@ BEGIN
     LTEXT           "Honlap:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "Készítõk:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,46,98,22,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -961,7 +967,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""© 2013 ZityiSoft""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""© 2014 ZityiSoft""\r\n"
     "  #define RC_VERSIONNAME ""Hungarian.dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -1010,6 +1016,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "%s frissítése\n\nJelenlegi verzió: %d.%d.%d.%d\nSzükséges verzió: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "Gyorsbillentyû már hozzá van rendelve ""%s""."
     MSG_CANNOT_OPEN_FILE    "Nem lehet megnyitni a fájlt ""%s""."
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "Érvénytelen sorszám."
     MSG_LONG_FILELIST       "Túl sok fájlt választott."
     MSG_DOCUMENT_CHANGED    "A dokumentum módosítva lett. Szeretné menteni?"
