--- a/src/akelpad-src/AkelFiles/Langs/Resources/Italian.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Italian.rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "© 2013 Giovanni Fiocco aka Vecna"
+  #define RC_VERSIONCOPYRIGHT "© 2014 Giovanni Fiocco aka Vecna"
   #define RC_VERSIONNAME "Italian.dll"
 #endif
 #include "winresrc.h"
@@ -85,6 +85,7 @@ BEGIN
         POPUP "&Selezione"
         BEGIN
             MENUITEM "Incolla a colonna\tAlt+V",    IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "Sposta a destra di una tabulazione\tTab", 
                                                     IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "Sposta a sinistra di una tabulazione\tShift+Tab", 
@@ -100,6 +101,8 @@ BEGIN
 
             MENUITEM "Elimina gli spazi alla fine\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "&MAIUSCOLE\tCtrl+6",          IDM_EDIT_UPPERCASE
@@ -901,17 +904,20 @@ BEGIN
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "salvataggio estensioni predefinito",IDC_STATIC,37,77,
                     171,8
-    GROUPBOX        "Finestra Trova/Sostituisci",IDC_STATIC,9,96,200,53
+    GROUPBOX        "Finestra Trova/Sostituisci",IDC_STATIC,9,96,200,66
     CONTROL         "Sostituisci tutto - chiudi la finestra",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "Spunta ""Nella selezione"" se la selezione non è vuota",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "Ricerca continua",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Suggerimento",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -926,7 +932,7 @@ BEGIN
     LTEXT           "Sito web:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "Autori:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,46,98,22,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -969,7 +975,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""© 2013 Giovanni Fiocco aka Vecna""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""© 2014 Giovanni Fiocco aka Vecna""\r\n"
     "  #define RC_VERSIONNAME ""Italian.dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -1020,6 +1026,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "Aggiornamento %s\n\nVersione corrente: %d.%d.%d.%d\nVersione richiesta: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "Tasto già assegnato a ""%s""."
     MSG_CANNOT_OPEN_FILE    "Impossibile aprire il file ""%s""."
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "Numero di riga non valido."
     MSG_LONG_FILELIST       "Sono stati scelti troppi file."
     MSG_DOCUMENT_CHANGED    "Il documento è stato modificato. Si desidera salvarlo?"
