--- a/src/akelpad-src/AkelFiles/Langs/Resources/Japanese.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Japanese.rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "(C) 2013 Nardog and others"
+  #define RC_VERSIONCOPYRIGHT "(C) 2014 Nardog and others"
   #define RC_VERSIONNAME "Japanese.dll"
 #endif
 #include "winresrc.h"
@@ -86,6 +86,7 @@ BEGIN
         POPUP "選択範囲(&S)"
         BEGIN
             MENUITEM "箱形貼り付け\tAlt+V",         IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "Tab インデント(&B)\tTab",     IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "Tab アンインデント(&T)\tShift+Tab", 
                                                     IDM_EDIT_DELETE_TAB_MENU
@@ -100,6 +101,8 @@ BEGIN
 
             MENUITEM "末尾の空白を除去(&W)\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "大文字(&U)\tCtrl+6",          IDM_EDIT_UPPERCASE
@@ -889,17 +892,20 @@ BEGIN
                     WS_TABSTOP,9,59,200,10
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "保存時の既定の拡張子",IDC_STATIC,37,77,171,8
-    GROUPBOX        "検索/置換 ダイアログ",IDC_STATIC,9,96,200,53
+    GROUPBOX        "検索/置換 ダイアログ",IDC_STATIC,9,96,200,66
     CONTROL         """すべて置換"" のあとダイアログを閉じる",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "範囲が選択されていれば ""選択範囲から"" をチェックする",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "最初に戻って検索を続ける",IDC_OPTIONS_CYCLESEARCH,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,133,103,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "戻るときに通知する",IDC_OPTIONS_CYCLESEARCHPROMPT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -914,7 +920,7 @@ BEGIN
     LTEXT           "ホームページ:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "作者:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "電子メール:",IDC_STATIC,26,98,42,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -957,7 +963,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""(C) 2013 Nardog and others""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""(C) 2014 Nardog and others""\r\n"
     "  #define RC_VERSIONNAME ""Japanese.dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -1008,6 +1014,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "%s を更新してください。\n\n現在のバージョン: %d.%d.%d.%d\n必要なバージョン: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "ホットキーはすでに ""%s"" へ割り当てられています。"
     MSG_CANNOT_OPEN_FILE    "ファイル ""%s"" を開けません。"
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "不正な行番号です。"
     MSG_LONG_FILELIST       "選択したファイルの数が多すぎます。"
     MSG_DOCUMENT_CHANGED    "ドキュメントは変更されています。保存しますか?"
