--- a/src/akelpad-src/AkelFiles/Langs/Resources/Korean.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Korean.rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "(c) 2013 gony"
+  #define RC_VERSIONCOPYRIGHT "(c) 2014 gony"
   #define RC_VERSIONNAME "Korean.dll"
 #endif
 #include "winresrc.h"
@@ -86,6 +86,7 @@ BEGIN
         POPUP "선택(&S)"
         BEGIN
             MENUITEM "클립보드 내용 붙여넣기\tAlt+V", IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "탭 들여쓰기 늘임(&B)\tTab",   IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "탭 들여쓰기 줄임(&T)\tShift+Tab", 
                                                     IDM_EDIT_DELETE_TAB_MENU
@@ -100,6 +101,8 @@ BEGIN
 
             MENUITEM "줄끝 공백 제거(&W)\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "대문자로(&U)\tCtrl+6",        IDM_EDIT_UPPERCASE
@@ -889,17 +892,20 @@ BEGIN
                     WS_TABSTOP,9,59,200,10
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "default saving extension",IDC_STATIC,37,77,171,8
-    GROUPBOX        "찾기/바꾸기 대화상자",IDC_STATIC,9,96,200,53
+    GROUPBOX        "찾기/바꾸기 대화상자",IDC_STATIC,9,96,200,66
     CONTROL         "모두 바꾸기 - 대화상자 닫기",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "Check ""In selection"" if selection not empty",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "Cycle search",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Prompt",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -914,7 +920,7 @@ BEGIN
     LTEXT           "홈페이지:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "제작자:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,46,98,22,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -957,7 +963,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""(c) 2013 gony""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""(c) 2014 gony""\r\n"
     "  #define RC_VERSIONNAME ""Korean.dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -1006,6 +1012,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "업데이트 %s\n\n현재 버젼: %d.%d.%d.%d\n필요한 버젼: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "이미 ""%s""에 할당된 단축키입니다."
     MSG_CANNOT_OPEN_FILE    """%s"" 파일을 열 수 없습니다."
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "줄번호가 올바르지 않습니다."
     MSG_LONG_FILELIST       "선택한 파일이 너무 많습니다."
     MSG_DOCUMENT_CHANGED    "문서를 수정하셨습니다. 저장하시겠습니까?"
