--- a/src/akelpad-src/AkelFiles/Langs/Resources/Romanian.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Romanian.rc
@@ -85,6 +85,7 @@ BEGIN
         POPUP "Textul &Selectat"
         BEGIN
             MENUITEM "Lipeºte Colonar\tAlt+V",      IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "Indenteazã cu Ta&bulatorul\tTab", 
                                                     IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "Autdenteazã cu &Tabulatorul\tShift+Tab", 
@@ -100,6 +101,8 @@ BEGIN
 
             MENUITEM "Tunde Spaþiul Gol &Final\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "&MAJUSCULE\tCtrl+6",          IDM_EDIT_UPPERCASE
@@ -897,17 +900,20 @@ BEGIN
                     WS_TABSTOP,9,59,200,10
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "extensia implicitã la salvare",IDC_STATIC,37,77,171,8
-    GROUPBOX        "Dialogul Cautã/Înlocuieºte",IDC_STATIC,9,96,200,53
+    GROUPBOX        "Dialogul Cautã/Înlocuieºte",IDC_STATIC,9,96,200,66
     CONTROL         "Înlocuieºte Tot : duce la închiderea dialogului de înlocuire",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "Autobifeazã opþiunea ""În selecþie"" dacã existã o selecþie",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "Bucleazã cãutarea",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Întreabã",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -922,7 +928,7 @@ BEGIN
     LTEXT           "Sit:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "Autori:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,46,98,22,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -1014,6 +1020,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "Actualizeazã %s\n\nVersiunea curentã: %d.%d.%d.%d\nVersiunea necesarã: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "Tasta iute a fost deja alocatã pentru ""%s""."
     MSG_CANNOT_OPEN_FILE    "Nu pot deschide fila ""%s""."
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "Numãr de linie nevalid."
     MSG_LONG_FILELIST       "Prea multe file selectate."
     MSG_DOCUMENT_CHANGED    "Documentul a fost modificat. Vrei sã-l salvezi?"
