--- a/src/akelpad-src/AkelFiles/Langs/Resources/Slovak.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Slovak.rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "© 2013 pvagner"
+  #define RC_VERSIONCOPYRIGHT "© 2014 pvagner"
   #define RC_VERSIONNAME "Slovak.dll"
 #endif
 #include "winresrc.h"
@@ -85,6 +85,7 @@ BEGIN
         POPUP "V˝&ber"
         BEGIN
             MENUITEM "Prilepiù stÂpce\tAlt+V",      IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "Ods&adiù tabul·tormi\tTab",   IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "Zruöiù odsadenie &tab\tShift+Tab", 
                                                     IDM_EDIT_DELETE_TAB_MENU
@@ -98,6 +99,8 @@ BEGIN
 
             MENUITEM "Vymazaù medzery na konci riadku\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "&VEºK… PÕSMEN¡\tCtrl+6",      IDM_EDIT_UPPERCASE
@@ -903,17 +906,20 @@ BEGIN
                     WS_TABSTOP,9,59,200,10
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "Predvolen· prÌpona pri ukladanÌ",IDC_STATIC,37,77,171,8
-    GROUPBOX        "DialÛg hæadaù / nahradiù",IDC_STATIC,9,96,200,53
+    GROUPBOX        "DialÛg hæadaù / nahradiù",IDC_STATIC,9,96,200,66
     CONTROL         "TlaËidlo &Nahradiù vöetko zatvorÌ dialÛg",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "Vyhæad·vaù vo v˝bere, ak je vybrat˝ text",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "Cycle search",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Prompt",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -928,7 +934,7 @@ BEGIN
     LTEXT           "Web str·nka:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "Autori:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,46,98,22,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -971,7 +977,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""© 2013 pvagner""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""© 2014 pvagner""\r\n"
     "  #define RC_VERSIONNAME ""Slovak.dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -1020,6 +1026,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "Aktualizujte %s\n\nAktu·lna verzia: %d.%d.%d.%d\nPoûadovan· verzia: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "T·to kl·vesov· skratka je uû priraden· ""%s""."
     MSG_CANNOT_OPEN_FILE    "Nepodarilo sa otvoriù s˙bor ""%s""."
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "Nespr·vne ËÌslo riadku."
     MSG_LONG_FILELIST       "Vybrali ste priveæa s˙borov."
     MSG_DOCUMENT_CHANGED    "Dokument sa zmenil. Chcete ho uloûiù?"
