--- a/src/akelpad-src/AkelFiles/Langs/Resources/Spanish.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Spanish.rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "© 2013 Vico//Koby (vicokoby@gmail.com)"
+  #define RC_VERSIONCOPYRIGHT "© 2014 Vico//Koby (vicokoby@gmail.com)"
   #define RC_VERSIONNAME "Spanish.dll"
 #endif
 #include "winresrc.h"
@@ -85,6 +85,7 @@ BEGIN
         POPUP "&Selección"
         BEGIN
             MENUITEM "Pegar columna\tAlt+V",        IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "Ta&bulación con sangría\tTab", 
                                                     IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "&Tabulación sin sangría\tShift+Tab", 
@@ -99,6 +100,8 @@ BEGIN
 
             MENUITEM "Arreglar rastro de espacios &blancos\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Delete selection whitespaces",
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "&MAYÚSCULAS\tCtrl+6",         IDM_EDIT_UPPERCASE
@@ -899,17 +902,20 @@ BEGIN
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "Extensión predeterminada para guardar",IDC_STATIC,37,77,
                     171,8
-    GROUPBOX        "Diálogo buscar/reemplazar",IDC_STATIC,9,96,200,53
+    GROUPBOX        "Diálogo buscar/reemplazar",IDC_STATIC,9,96,200,66
     CONTROL         "Reemplazar todo - cerrar diálogo",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Replace all"" without message",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "Comprobar ""En selección"" si la selección no está vacía",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "Búsqueda cíclica",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Prompt",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -924,7 +930,7 @@ BEGIN
     LTEXT           "Página Web:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "Autores:",IDC_STATIC,20,62,177,109
-    LTEXT           "Shengalts Aleksander, 2006-2013",IDC_STATIC,73,82,120,
+    LTEXT           "Shengalts Aleksander, 2006-2014",IDC_STATIC,73,82,120,
                     12,NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,46,98,22,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -967,7 +973,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""© 2013 Vico//Koby (vicokoby@gmail.com)""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""© 2014 Vico//Koby (vicokoby@gmail.com)""\r\n"
     "  #define RC_VERSIONNAME ""Spanish.dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -1017,6 +1023,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "Actualizar %s\n\nVersión actual: %d.%d.%d.%d\nVersión requerida: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "Tecla directa ya asignada a ""%s""."
     MSG_CANNOT_OPEN_FILE    "No se puede abrir el archivo ""%s""."
+    MSG_WRONG_FILENAME      "%s\nWrong file name."
     MSG_WRONG_STRING        "Número de línea inválido."
     MSG_LONG_FILELIST       "Demasiados archivos escogidos."
     MSG_DOCUMENT_CHANGED    "El documento ha sido modificado. ¿Quiere guardarlo?"
