--- a/src/akelpad-src/AkelFiles/Langs/Resources/Ukrainian.rc
+++ b/src/akelpad-src/AkelFiles/Langs/Resources/Ukrainian.rc
@@ -13,7 +13,7 @@
   #else
     #define RC_VERSIONDESCRIPTION "AkelPad (x86) language module"
   #endif
-  #define RC_VERSIONCOPYRIGHT "© 2013 Fedorow Olexandr (www.olexandr@mail.ru), Yurii Petrashko aka YuriPet"
+  #define RC_VERSIONCOPYRIGHT "© 2014 Fedorow Olexandr (www.olexandr@mail.ru), Yurii Petrashko aka YuriPet"
   #define RC_VERSIONNAME "Ukrainian.dll"
 #endif
 #include "winresrc.h"
@@ -85,6 +85,7 @@ BEGIN
         POPUP "Позна&чене"
         BEGIN
             MENUITEM "Вертикальна вставка\tAlt+V",  IDM_EDIT_PASTECOLUMN
+            MENUITEM SEPARATOR
             MENUITEM "&Додати Tab\tTab",            IDM_EDIT_INSERT_TAB_MENU
             MENUITEM "&Прибрати Tab\tShift+Tab",    IDM_EDIT_DELETE_TAB_MENU
             MENUITEM "Д&одати пробіл\tSpace",       IDM_EDIT_INSERT_SPACE_MENU
@@ -97,6 +98,8 @@ BEGIN
 
             MENUITEM "Прибра&ти табуляцію й пробіли в кінці\tAlt+Backspace", 
                                                     IDM_EDIT_DELETE_TRAILING_WHITESPACES
+            MENUITEM "Убрать Tab'ы и пробелы в выделении", 
+                                                    IDM_EDIT_DELETESELWHITESPACES
 
             MENUITEM SEPARATOR
             MENUITEM "УСІ &ПРОПИСНІ\tCtrl+6",       IDM_EDIT_UPPERCASE
@@ -894,17 +897,20 @@ BEGIN
     EDITTEXT        IDC_OPTIONS_DEFAULT_SAVE_EXT,9,75,24,13,ES_AUTOHSCROLL
     LTEXT           "розширення за промовчанням при збереженні документу",
                     IDC_STATIC,37,77,171,8
-    GROUPBOX        "Діалог пошуку/заміни",IDC_STATIC,9,96,200,53
+    GROUPBOX        "Діалог пошуку/заміни",IDC_STATIC,9,96,200,66
     CONTROL         """Замінити все"" закриває діалог",
                     IDC_OPTIONS_REPLACEALL_CLOSE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,17,109,185,10
+    CONTROL         """Заменить всё"" без сообщения",
+                    IDC_OPTIONS_REPLACEALL_NOMSG,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,121,185,10
     CONTROL         "Відмітити ""У позначеному"" якщо є позначення",
                     IDC_OPTIONS_INSELIFSEL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,17,121,185,10
+                    WS_TABSTOP,17,133,185,10
     CONTROL         "Пошук по колу",IDC_OPTIONS_CYCLESEARCH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,17,133,102,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,145,102,10
     CONTROL         "Запрос",IDC_OPTIONS_CYCLESEARCHPROMPT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,133,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,122,145,83,10
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 220, 207
@@ -919,7 +925,7 @@ BEGIN
     LTEXT           "Домашня сторінка:",IDC_STATIC,19,41,85,11
     PUSHBUTTON      "",IDC_ABOUT_HOMEPAGE,105,40,92,14,0,WS_EX_STATICEDGE
     GROUPBOX        "Автори:",IDC_STATIC,20,62,177,109
-    LTEXT           "Шенгальц Олександр, 2006-2013",IDC_STATIC,73,82,120,12,
+    LTEXT           "Шенгальц Олександр, 2006-2014",IDC_STATIC,73,82,120,12,
                     NOT WS_GROUP
     LTEXT           "E-Mail:",IDC_STATIC,46,98,22,12,NOT WS_GROUP,
                     WS_EX_RIGHT
@@ -962,7 +968,7 @@ BEGIN
     "  #else\r\n"
     "    #define RC_VERSIONDESCRIPTION ""AkelPad (x86) language module""\r\n"
     "  #endif\r\n"
-    "  #define RC_VERSIONCOPYRIGHT ""© 2013 Fedorow Olexandr (www.olexandr@mail.ru), Yurii Petrashko aka YuriPet""\r\n"
+    "  #define RC_VERSIONCOPYRIGHT ""© 2014 Fedorow Olexandr (www.olexandr@mail.ru), Yurii Petrashko aka YuriPet""\r\n"
     "  #define RC_VERSIONNAME ""Ukrainian.dll""\r\n"
     "#endif\r\n"
     "#include ""winresrc.h""\r\n"
@@ -1032,6 +1038,7 @@ BEGIN
     MSG_UPDATE_LANGMODULE   "Оновіть %s\n\nПоточна версія: %d.%d.%d.%d\nНеобхідна версія: %d.%d.%d.%d"
     MSG_HOTKEY_EXISTS       "Гаряча клавіша вже призначена для ""%s""."
     MSG_CANNOT_OPEN_FILE    "Неможливо відкрити файл ""%s""."
+    MSG_WRONG_FILENAME      "%s\nНедопустимое имя файла."
     MSG_WRONG_STRING        "Неправильний номер рядка."
     MSG_LONG_FILELIST       "Обрано занадто багато файлів."
     MSG_DOCUMENT_CHANGED    "Документ був змінений. Зберегти?"
